--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
           node-version: 16
           cache: npm
       - run: npm install
-      - run: npm run build
+      - run: npx vite build --base=/reinvent-react-transition-group/
         env:
           NODE_ENV: production
       - uses: peaceiris/actions-gh-pages@v3
